--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,3 +11,7 @@ $theme-dark-orange: #deb154;
 $theme-dark-orange-hover: #b99241;
 $theme-dark-purple: #53498a;
 $theme-dark-purple-hover: #463c79;
+
+
+$breakpoint-laptop: 1440px;
+$breakpoint-tablet-landscape: 1112px;
