--- a/src/components/Notepad/Notepad.scss
+++ b/src/components/Notepad/Notepad.scss
@@ -24,4 +24,12 @@
       padding: 10px;
       outline: none;
     }
+}
+
+@media only screen and (max-width: $breakpoint-laptop) {
+  .notepad {
+    border-bottom: 1px solid $theme-border-color;
+    height: 500px;
+    min-height: 500px;
   }
+}
