--- a/src/components/PlayerSections/PlayerSections.scss
+++ b/src/components/PlayerSections/PlayerSections.scss
@@ -66,4 +66,10 @@
       }
     }
   
+}
+
+@media only screen and (max-width: $breakpoint-laptop) {
+  .player-sections {
+    border-bottom: 1px solid $theme-border-color;
   }
+}
