--- a/src/components/Tasks/Tasks.scss
+++ b/src/components/Tasks/Tasks.scss
@@ -40,3 +40,15 @@
     grid-column-gap: 0px;
     grid-row-gap: 0px;
 }
+
+@media only screen and (max-width: $breakpoint-tablet-landscape) {
+    .task-list-wrapper {
+      grid-template-columns: repeat(1,1fr);
+    }
+    .map-task-tabs {
+      padding: 0;
+    }
+    .map-task {
+        padding: 20px 10px;
+    }
+  }
